--- a/src/centro_garantia_vehiculos/mainwindow.ui
+++ b/src/centro_garantia_vehiculos/mainwindow.ui
@@ -6,12 +6,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>982</width>
+    <height>838</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>982</width>
+    <height>838</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>982</width>
+    <height>838</height>
+   </size>
+  </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Centro de Garantia y Vehiculos</string>
   </property>
   <widget class="QWidget" name="centralwidget"/>
   <widget class="QMenuBar" name="menubar">
@@ -19,12 +31,45 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>982</width>
      <height>23</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuMenu">
+    <property name="title">
+     <string>Manual</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menuAleatorio">
+    <property name="title">
+     <string>Aleatorio</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menuAjustes">
+    <property name="title">
+     <string>Ajustes</string>
+    </property>
+   </widget>
+   <addaction name="menuMenu"/>
+   <addaction name="menuAleatorio"/>
+   <addaction name="menuAjustes"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionManual">
+   <property name="text">
+    <string>Manual</string>
+   </property>
+  </action>
+  <action name="actionAutomatico">
+   <property name="text">
+    <string>Aleatorio</string>
+   </property>
+  </action>
+  <action name="actionAjustes">
+   <property name="text">
+    <string>Ajustes</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
