--- a/src/centro_garantia_vehiculos/centrogarantiavehiculo.ui
+++ b/src/centro_garantia_vehiculos/centrogarantiavehiculo.ui
@@ -146,6 +146,12 @@ li.checked::marker { content: &quot;\2612&quot;; }
           <height>41</height>
          </rect>
         </property>
+        <property name="toolTip">
+         <string/>
+        </property>
+        <property name="placeholderText">
+         <string>Ingrese el nombre del cliente</string>
+        </property>
        </widget>
        <widget class="QPushButton" name="pushButton">
         <property name="geometry">
@@ -155,6 +161,10 @@ li.checked::marker { content: &quot;\2612&quot;; }
           <width>111</width>
           <height>41</height>
          </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(0, 0, 255);
+color: rgb(255, 255, 255);</string>
         </property>
         <property name="text">
          <string>Seleccionar</string>
@@ -169,6 +179,10 @@ li.checked::marker { content: &quot;\2612&quot;; }
           <height>41</height>
          </rect>
         </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(255, 0, 0);
+color: rgb(255, 255, 255);</string>
+        </property>
         <property name="text">
          <string>Eliminar</string>
         </property>
@@ -181,6 +195,10 @@ li.checked::marker { content: &quot;\2612&quot;; }
           <width>111</width>
           <height>41</height>
          </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(0, 170, 0);
+color: rgb(255, 255, 255);</string>
         </property>
         <property name="text">
          <string>Agregar</string>
