--- a/src/centro_garantia_vehiculos/centrogarantiavehiculo.ui
+++ b/src/centro_garantia_vehiculos/centrogarantiavehiculo.ui
@@ -52,7 +52,7 @@
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="page">
        <widget class="QTableWidget" name="clienteTableWidget">
@@ -366,7 +366,7 @@ color: rgb(255, 255, 255);</string>
          <string>&lt; Volver</string>
         </property>
        </widget>
-       <widget class="QTableWidget" name="vehiculosClienteTable_2">
+       <widget class="QTableWidget" name="serviciosTable">
         <property name="geometry">
          <rect>
           <x>20</x>
@@ -408,7 +408,7 @@ color: rgb(255, 255, 255);</string>
        <widget class="QPushButton" name="pushButton_9">
         <property name="geometry">
          <rect>
-          <x>720</x>
+          <x>850</x>
           <y>70</y>
           <width>111</width>
           <height>41</height>
@@ -419,41 +419,7 @@ color: rgb(255, 255, 255);</string>
 color: rgb(255, 255, 255);</string>
         </property>
         <property name="text">
-         <string>Agregar</string>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="pushButton_10">
-        <property name="geometry">
-         <rect>
-          <x>590</x>
-          <y>70</y>
-          <width>111</width>
-          <height>41</height>
-         </rect>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(0, 0, 255);
-color: rgb(255, 255, 255);</string>
-        </property>
-        <property name="text">
-         <string>Seleccionar</string>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="pushButton_11">
-        <property name="geometry">
-         <rect>
-          <x>850</x>
-          <y>70</y>
-          <width>111</width>
-          <height>41</height>
-         </rect>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(255, 0, 0);
-color: rgb(255, 255, 255);</string>
-        </property>
-        <property name="text">
-         <string>Eliminar</string>
+         <string>Reportar Falla</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_2">
